<resources>
	<string name="app_name">RapiDO</string>
	<string name="task_hint_title">What to do?</string>
	<string name="error_network">Network error</string>
	<string name="disconnected">Disconnected</string>
	<string name="connecting">Connecting</string>
	<string name="deauth">Deauth</string>
	<string name="search">Search</string>
	<string name="filter">Filter</string>
	<string name="task_hint_description">Description</string>
	<string name="created_at">Created %s</string>
	<string name="edit_task_title">Edit Task</string>
	<string name="drawer_open">Open filter</string>
	<string name="drawer_close">Close filter</string>
	<string name="order_by">Order by</string>
	<string name="filter_done">Complete</string>
	<string name="filter_all">All</string>
	<string name="filter_not_done">Incomplete</string>
	<string name="filter_state">State</string>
	<string name="filter_tags">Tags</string>
	<string name="priority">Priority</string>
</resources>
