<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:android="http://schemas.android.com/apk/res/android">

	<data>

		<import type="io.rapid.rapido.ui.filter.FilterState" />

		<import type="io.rapid.Sorting" />

		<variable
			name="viewModel"
			type="io.rapid.rapido.ui.filter.FilterViewModel" />
	</data>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<android.support.constraint.ConstraintLayout
			android:layout_width="match_parent"
			android:padding="8dp"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<TextView
				android:id="@+id/textView5"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:layout_marginStart="8dp"
				android:layout_marginEnd="8dp"
				android:text="@string/order_by"
				android:textColor="@color/secondaryText"
				android:textAppearance="@style/TextAppearance.AppCompat.Button"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintTop_toTopOf="parent" />


			<Spinner
				android:id="@+id/spinner2"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_marginEnd="8dp"
				android:layout_marginTop="8dp"
				android:entries="@array/order_names"
				android:selectedItemPosition="@={viewModel.orderPosition}"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toStartOf="@+id/textView4"
				app:layout_constraintTop_toBottomOf="@+id/textView5" />

			<ImageView
				android:id="@+id/textView4"
				android:layout_width="24dp"
				android:layout_height="24dp"
				android:layout_marginEnd="8dp"
				android:layout_marginStart="8dp"
				android:background="?selectableItemBackgroundBorderless"
				android:onClick="@{() -> viewModel.toggleSorting()}"
				android:tint="@color/secondaryText"
				android:src="@{viewModel.orderSorting == Sorting.ASC ? @drawable/ic_order_asc : @drawable/ic_order_desc}"
				tools:src="@drawable/ic_order_desc"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toEndOf="@+id/spinner2"
				app:layout_constraintTop_toTopOf="@+id/spinner2"
				android:layout_marginTop="0dp"
				app:layout_constraintBottom_toBottomOf="@+id/spinner2" />


			<TextView
				android:id="@+id/linearLayout2"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:layout_marginStart="8dp"
				android:text="@string/filter_state"
				android:textColor="@color/secondaryText"
				android:textAppearance="@style/TextAppearance.AppCompat.Button"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/spinner2"
				app:layout_constraintHorizontal_bias="0.0"
				android:layout_marginEnd="8dp" />


			<RadioButton
				android:id="@+id/radioButton4"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:onClick="@{() -> viewModel.setFilterState(FilterState.DONE)}"
				android:checked="@{viewModel.filterState == FilterState.DONE}"
				app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
				app:layout_constraintStart_toStartOf="parent"
				android:layout_marginStart="8dp"
				app:layout_constraintEnd_toStartOf="@+id/radioButton5"
				app:layout_constraintHorizontal_bias="0.5"
				android:layout_marginEnd="8dp"
				app:layout_constraintEnd_toEndOf="@+id/textView10"
				android:layout_marginTop="8dp" />

			<RadioButton
				android:id="@+id/radioButton5"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:onClick="@{() -> viewModel.setFilterState(FilterState.ALL)}"
				android:checked="@{viewModel.filterState == FilterState.ALL}"
				app:layout_constraintStart_toEndOf="@+id/radioButton4"
				app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
				app:layout_constraintHorizontal_bias="0.5"
				android:layout_marginStart="8dp"
				app:layout_constraintEnd_toStartOf="@+id/radioButton6"
				android:layout_marginEnd="8dp"
				app:layout_constraintEnd_toEndOf="@+id/textView11"
				android:layout_marginTop="8dp" />

			<RadioButton
				android:id="@+id/radioButton6"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:onClick="@{() -> viewModel.setFilterState(FilterState.NOT_DONE)}"
				android:checked="@{viewModel.filterState == FilterState.NOT_DONE}"
				app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
				app:layout_constraintStart_toEndOf="@+id/radioButton5"
				app:layout_constraintEnd_toEndOf="parent"
				android:layout_marginEnd="8dp"
				app:layout_constraintHorizontal_bias="0.5"
				android:layout_marginStart="8dp"
				android:layout_marginTop="8dp" />

			<TextView
				android:id="@+id/textView10"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:textSize="10sp"
				android:textAppearance="@style/TextAppearance.AppCompat.Body1"
				android:gravity="center"
				android:text="@string/filter_done"
				app:layout_constraintTop_toBottomOf="@+id/radioButton4"
				app:layout_constraintStart_toStartOf="@+id/radioButton4"
				app:layout_constraintEnd_toEndOf="@+id/radioButton4"
				android:layout_marginEnd="0dp" />


			<TextView
				android:id="@+id/textView11"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:textSize="10sp"
				android:textAppearance="@style/TextAppearance.AppCompat.Body1"
				android:text="@string/filter_all"
				app:layout_constraintTop_toBottomOf="@+id/radioButton5"
				android:layout_marginTop="8dp"
				app:layout_constraintEnd_toEndOf="@+id/radioButton5"
				android:layout_marginEnd="0dp"
				app:layout_constraintStart_toStartOf="@+id/radioButton5"
				android:layout_marginStart="0dp" />


			<TextView
				android:id="@+id/textView12"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:gravity="center"
				android:textSize="10sp"
				android:textAppearance="@style/TextAppearance.AppCompat.Body1"
				android:text="@string/filter_not_done"
				app:layout_constraintTop_toBottomOf="@+id/radioButton6"
				app:layout_constraintEnd_toEndOf="@+id/radioButton6"
				app:layout_constraintStart_toStartOf="@+id/radioButton6"
				android:layout_marginStart="0dp" />


			<TextView
				android:id="@+id/textView13"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:text="@string/filter_tags"
				android:textColor="@color/secondaryText"
				android:textAppearance="@style/TextAppearance.AppCompat.Button"
				tools:layout_conversion_absoluteX="16dp"
				tools:layout_conversion_absoluteY="197dp"
				tools:layout_conversion_absoluteWidth="352dp"
				tools:layout_conversion_absoluteHeight="17dp"
				app:layout_constraintTop_toBottomOf="@+id/textView10"
				android:layout_marginTop="8dp"
				app:layout_constraintStart_toStartOf="parent"
				android:layout_marginStart="8dp"
				app:layout_constraintEnd_toEndOf="parent"
				android:layout_marginEnd="8dp" />

			<io.rapid.rapido.ui.view.TagSelectView
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				app:onSelectionChangedListener="@{(selectedTags) -> viewModel.onSelectedTagsChanged(selectedTags)}"
				android:id="@+id/tagSelectView2"
				app:layout_constraintTop_toBottomOf="@+id/textView13"
				android:layout_marginTop="8dp"
				app:layout_constraintEnd_toEndOf="parent"
				android:layout_marginEnd="8dp"
				app:layout_constraintStart_toStartOf="parent"
				android:layout_marginStart="8dp" />
		</android.support.constraint.ConstraintLayout>
	</ScrollView>

</layout>
