<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<data>

		<variable
			name="viewModel"
			type="io.rapid.rapido.ui.edit.EditTaskViewModel" />
	</data>

	<android.support.design.widget.CoordinatorLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<android.support.design.widget.AppBarLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:elevation="0dp">

			<android.support.v7.widget.Toolbar
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@color/white"
				app:navigationIcon="@drawable/ic_close"
				app:navigationOnClickListener="@{() -> viewModel.dismiss()}"
				app:theme="@style/ThemeOverlay.AppCompat.Light"
				app:title="@string/edit_task_title" />
		</android.support.design.widget.AppBarLayout>


		<android.support.v4.widget.NestedScrollView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginBottom="?actionBarSize"
			app:layout_behavior="@string/appbar_scrolling_view_behavior">

			<android.support.constraint.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:clipToPadding="false"
				android:orientation="vertical"
				>

				<android.support.design.widget.TextInputLayout
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					tools:layout_conversion_absoluteX="16dp"
					tools:layout_conversion_absoluteY="72dp"
					tools:layout_conversion_absoluteWidth="352dp"
					tools:layout_conversion_absoluteHeight="73dp"
					android:id="@+id/textInputLayout2"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					android:layout_marginTop="8dp"
					android:layout_marginEnd="8dp"
					android:layout_marginStart="8dp"
					app:layout_constraintTop_toTopOf="parent">

					<EditText
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/task_hint_title"
						android:imeOptions="actionDone"
						android:inputType="textCapWords"
						android:text="@={viewModel.task.title}"
						android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
				</android.support.design.widget.TextInputLayout>


				<android.support.design.widget.TextInputLayout
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					tools:layout_conversion_absoluteX="16dp"
					tools:layout_conversion_absoluteY="161dp"
					tools:layout_conversion_absoluteWidth="352dp"
					tools:layout_conversion_absoluteHeight="52dp"
					android:layout_marginTop="8dp"
					app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
					app:layout_constraintEnd_toEndOf="parent"
					android:layout_marginEnd="8dp"
					app:layout_constraintStart_toStartOf="parent"
					android:layout_marginStart="8dp"
					android:id="@+id/textInputLayout4">

					<EditText
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="@dimen/spacing_16"
						android:hint="@string/task_hint_description"
						android:imeOptions="actionDone"
						android:inputType="textCapWords"
						android:text="@={viewModel.task.description}"
						android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
				</android.support.design.widget.TextInputLayout>

				<TextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:text="@string/priority"
					android:textColor="@color/secondaryText"
					android:textAppearance="@style/TextAppearance.AppCompat.Button"
					tools:layout_conversion_absoluteX="16dp"
					tools:layout_conversion_absoluteY="229dp"
					tools:layout_conversion_absoluteWidth="352dp"
					tools:layout_conversion_absoluteHeight="17dp"
					android:id="@+id/textView7"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
					android:layout_marginStart="8dp"
					app:layout_constraintEnd_toEndOf="parent"
					android:layout_marginEnd="8dp"
					android:layout_marginTop="16dp" />

				<Spinner
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:entries="@array/priorities"
					android:padding="@dimen/spacing_8"
					android:selectedItemPosition="@={viewModel.task.priority}"
					tools:layout_conversion_absoluteX="16dp"
					tools:layout_conversion_absoluteY="253dp"
					tools:layout_conversion_absoluteWidth="121dp"
					tools:layout_conversion_absoluteHeight="35dp"
					android:id="@+id/spinner3"
					app:layout_constraintStart_toStartOf="parent"
					android:layout_marginTop="8dp"
					app:layout_constraintTop_toBottomOf="@+id/textView7"
					android:layout_marginStart="8dp" />

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/filter_tags"
					android:textColor="@color/secondaryText"
					android:textAppearance="@style/TextAppearance.AppCompat.Button"
					tools:layout_conversion_absoluteX="16dp"
					tools:layout_conversion_absoluteY="304dp"
					tools:layout_conversion_absoluteWidth="352dp"
					tools:layout_conversion_absoluteHeight="17dp"
					android:id="@+id/textView8"
					android:layout_marginTop="16dp"
					app:layout_constraintStart_toStartOf="parent"
					android:layout_marginStart="8dp"
					android:layout_marginEnd="8dp"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/spinner3" />

				<io.rapid.rapido.ui.view.TagSelectView
					android:id="@+id/tagSelectView3"
					android:layout_width="200dp"
					android:layout_height="wrap_content"
					android:layout_marginStart="8dp"
					android:layout_marginTop="8dp"
					app:selection="@{viewModel.task.tags}"
					app:onSelectionChangedListener="@{(selectedTags) -> viewModel.onSelectedTagsChanged(selectedTags)}"
					tools:layout_conversion_absoluteX="16dp"
					tools:layout_conversion_absoluteY="329dp"
					tools:layout_conversion_absoluteWidth="200dp"
					tools:layout_conversion_absoluteHeight="1dp"
					app:layout_constraintTop_toBottomOf="@+id/textView8"
					app:layout_constraintStart_toStartOf="parent"
					/>
			</android.support.constraint.ConstraintLayout>
		</android.support.v4.widget.NestedScrollView>


		<android.support.design.widget.FloatingActionButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="bottom|right"
			android:layout_margin="@dimen/spacing_16"
			android:onClick="@{() -> viewModel.onTaskUpdated()}"
			android:src="@drawable/ic_done"
			android:tint="@color/white"
			app:fabSize="normal" />
	</android.support.design.widget.CoordinatorLayout>

</layout>
